doc: update some of the docs and fix typos/formatting

--- a/doc/development/i18n.md
+++ b/doc/development/i18n.md
@@ -1,6 +1,6 @@
 **Table of contents**
 
-<!-- TOC depthFrom:1 insertAnchor:false orderedList:false -->
+<!-- TOC depthfrom:1 insertanchor:false orderedlist:false -->
 
 - [Extract strings](#extract-strings)
   - [What If... I don't have tox? or it's older?](#what-if-i-dont-have-tox-or-its-older)
@@ -16,6 +16,7 @@ As described in plugins documentation, Risu can make use of translated strings.
 
 - Strings with `_("whatever")` in python if language file has been installed
 
+        ```py
         # Import the _() function
         import gettext
         localedir = os.environ['TEXTDOMAINDIR']
@@ -26,10 +27,11 @@ As described in plugins documentation, Risu can make use of translated strings.
             _ = trad.ugettext
         except AttributeError:
             _ = trad.gettext
+        ```
 
 In order to prepare them for translation, `extractpot.sh` script must be used.
 
-It requires some dependencies to work, so easiest way is to run `tox -e pep8` as tox takes care of preparing a virtual environment with prerequirements and run from there.
+It requires some dependencies to work, so easiest way is to run `tox -e pep8` as tox takes care of preparing a virtual environment with pre-requirements and run from there.
 
 ### What If... I don't have tox? or it's older?
 
@@ -39,7 +41,7 @@ If your system version of tox is old, approach will be:
 - If `pipsi` is not installed, run first `pip install pipsi`.
 - If `pip` is not available, install your distribution `python-pip` package equivalent.
 
-**NOTE**: Ensure that your local path (`~/.local/bin`) preceeds regular system path so that your shell uses first the files in the local venvs created by pipsi.
+**NOTE**: Ensure that your local path (`~/.local/bin`) precedes regular system path so that your shell uses first the files in the local venvs created by pipsi.
 
 **NOTE**: Do not install anything else with `pip` as it can mess with your system-wide installed libraries and cause havoc on other programs.
 
@@ -47,8 +49,8 @@ If your system version of tox is old, approach will be:
 
 Once you have decided to start a translation or to improve a new one, you must use the risu.pot as 'base' for a new translation OR if you already have one created:
 
-- Open prior translation with poedit (so you can edit missing to translate strings)
-- If a plugin has introduced new strings, those will not appear on the file you're editting, so you'll need to update it:
+- Open prior translation with `poedit` (so you can edit missing to translate strings)
+- If a plugin has introduced new strings, those will not appear on the file you're editing, so you'll need to update it:
   - Execute `./extractpot.sh` to update `risu.pot` with the new strings
   - While your older translation is open, select from the `poedit` menus: `Catalog`, then `Update from POT file`, and then select `risu.pot`.
   - The new strings will appear in your editor, remember to `save` to create `risu.po` for your language and the compiled `risu.mo`.
