docs: Reformat code inside docs

--- a/doc/development/i18n.md
+++ b/doc/development/i18n.md
@@ -19,9 +19,10 @@ As described in plugins documentation, Risu can make use of translated strings.
         ```py
         # Import the _() function
         import gettext
-        localedir = os.environ['TEXTDOMAINDIR']
+
+        localedir = os.environ["TEXTDOMAINDIR"]
         # This will use system defined LANGUAGE
-        trad = gettext.translation('risu', localedir, fallback=True)
+        trad = gettext.translation("risu", localedir, fallback=True)
 
         try:
             _ = trad.ugettext
